# django-codemirror2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  conftest.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run_example_server.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
codemirror2/: widgets.py
codemirror2/tests/: django_settings.py  test_widgets.py
examples/: README  settings.py  urls.py
examples/examples/: settings.py  urls.py
examples/testapp/: admin.py  models.py
examples/testapp/migrations/: 0001_initial.py  0002_testparent_testchild.py
src/codemirror2/: widgets.py
src/codemirror2/templates/codemirror2/: codemirror_script.html
tests/: test_widgets.py
