[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codemirror2"]

[project]
version = "0.2.1.dev1"
name = "django_codemirror2"
dependencies = [
    "django<6",
]
requires-python = ">= 3.10"
authors = [
    {name="Alexander Clausen", email="alex@gc-web.de"},
]
description = "Django widgets for replacing textareas with CodeMirror2, an in-browser code editor"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: JavaScript",
    "Topic :: Text Editors",
]
readme = "README.rst"

[project.urls]
Repository = "https://github.com/sk1p/django-codemirror2"
